# task_manager_django

./: .dockerignore  .env.example  .gitignore  DOCKER_README.md  Dockerfile  README.md  docker-compose.yml  pyproject.toml  start.sh
bot/: bot.py
config/: asgi.py  celery.py  settings.py  urls.py
static/css/: style.css
static/js/: main.js
tasks/: admin.py  apps.py  consumers.py  models.py  routing.py  serializers.py  tasks.py  urls.py  views.py
tasks/migrations/: 0001_initial.py  0002_telegramprofile.py
templates/: index.html
