[project]
name = "task-manager-django"
version = "0.1.0"
description = ""
authors = [
    {name = "AlexandrLutay"}
]
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "django (>=5.2.7,<6.0.0)",
    "djangorestframework (>=3.16.1,<4.0.0)",
    "channels (>=4.3.1,<5.0.0)",
    "redis (>=6.4.0,<7.0.0)",
    "celery (>=5.5.3,<6.0.0)",
    "djangorestframework-simplejwt (>=5.5.1,<6.0.0)",
    "aiogram (>=3.22.0,<4.0.0)",
    "dotenv (>=0.9.9,<0.10.0)",
    "daphne (>=4.2.1,<5.0.0)",
    "whitenoise (>=6.11.0,<7.0.0)",
    "channels-redis (>=4.3.0,<5.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
